--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script src="js/index.js"></script>
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in carryadder lab.
   </footer>
 </body>
 
